kubernetesback2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backendv2
spec:
  replicas: 3
  selector:
    matchLabels:
      role: backendv2
  template:
    metadata:
      labels:
        role: backendv2
    spec:
      containers:
      - name: backendv2
        image: alepellereca/imagenback:2
        ports:
        - containerPort: 62383
