kubernetesback1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backendv1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backendv1
  template:
    metadata:
      labels:
        app: backendv1
    spec:
      containers:
      - name: backendv1
        image: alepellereca/imagenback:1
        args:
        - "text=Backend 1 Service"
        ports:
        - containerPort: 8082
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: backendservicev1
spec:
  type: NodePort
  ports:
  - port: 8082
    targetPort: 8082
  selector:
    app: backendv1
