kubernetesback1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backendv1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backendv1
  template:
    metadata:
      labels:
        app: backendv1
    spec:
      containers:
      - name: backendv1
        image: alepellereca/imagenback:1
        ports:
        - containerPort: 62383
---
apiVersion: v1
kind: Service
metadata:
  name: backendservicev1
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 62383
  selector:
    app: backendv1
