kubernetesback2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backendv2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backendv2
  template:
    metadata:
      labels:
        app: backendv2
    spec:
      containers:
      - name: backendv2
        image: alepellereca/imagenback:2
        args:
        - "text=Backend 2 Service"
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: backendservicev2
spec:
  type: NodePort
  ports:
  - port: 8081
    targetPort: 8080
  selector:
    app: backendv2
