kubernetesfront1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontendv1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontendv1
  template:
    metadata:
      labels:
        app: frontendv1
    spec:
      containers:
      - name: frontendv1
        image: alepellereca/imagenfront:1
        args:
        - "text=Frontend 1 Service"
        ports:
        - containerPort: 8081
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: frontendservicev1
spec:
  type: NodePort
  ports:
  - port: 8081
    targetPort: 8081
  selector:
    app: frontendv1
