kubernetesfront2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontendv2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontendv2
  template:
    metadata:
      labels:
        app: frontendv2
    spec:
      containers:
      - name: frontendv2
        image: alepellereca/imagenfront:2
        args:
        - "text=Frontend 1 Service"
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: frontendservicev2
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: frontendv2
