kubernetesfront2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontendv2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontendv2
  template:
    metadata:
      labels:
        app: frontendv2
    spec:
      containers:
      - name: frontendv2
        image: alepellereca/imagenfront:2
        args:
        - "text=Frontend 1 Service"
        ports:
        - containerPort: 62383
---
apiVersion: v1
kind: Service
metadata:
  name: frontendservicev2
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 62383
    nodePort: 30282
  selector:
    app: frontendv2
