ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: frontendservicev1
            port:
              number: 8081
      - path: /v1/backend
        pathType: Prefix
        backend:
          service:
            name: backendservicev1
            port:
              number: 8082
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: frontendservicev2
            port:
              number: 8083
      - path: /v2/backend
        pathType: Prefix
        backend:
          service:
            name: backendservicev2
            port:
              number: 8084
