ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /frontendv1
        pathType: Prefix
        backend:
          service:
            name: frontendservicev1
            port:
              number: 5000
      - path: /frontendv2
        pathType: Prefix
        backend:
          service:
            name: frontendservicev2
            port:
              number: 5000
      - path: /backendv1
        pathType: Prefix
        backend:
          service:
            name: backendservicev1
            port:
              number: 5000
      - path: /backendv2
        pathType: Prefix
        backend:
          service:
            name: backendservicev2
            port:
              number: 5000
